--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -13,7 +13,7 @@
     "solhint": "solhint --config ./.solhint.json 'src/**/*.sol' --fix",
     "test": "mud test",
     "test-verbose": "mud test --forgeOptions=' -vvv'",
-    "test-single": "mud test --forgeOptions='--match-test testOneMixerTwoInlets'",
+    "test-single": "mud test --forgeOptions='--match-test testOrderCreate'",
     "----- OLD TESTNET -----": "---------------------------",
     "deploy:testnet": "pnpm run build && mud deploy --profile=lattice-testnet --forgeScriptOptions='--batch-size 5'",
     "faucet:testnet": "pnpm mud faucet --faucetUrl=https://faucet.testnet2-mud-services.linfra.xyz --address",
@@ -25,20 +25,20 @@
     "deploy:redstone-mainnet": "DEBUG=mud:* mud deploy --profile=redstone --forgeScriptOptions='--batch-size 5'"
   },
   "dependencies": {
-    "@latticexyz/cli": "2.0.7-main-82ada7a3",
-    "@latticexyz/config": "2.0.7-main-82ada7a3",
-    "@latticexyz/gas-report": "2.0.7-main-82ada7a3",
-    "@latticexyz/schema-type": "2.0.7-main-82ada7a3",
-    "@latticexyz/store": "2.0.7-main-82ada7a3",
-    "@latticexyz/world": "2.0.7-main-82ada7a3",
-    "@latticexyz/world-modules": "2.0.7-main-82ada7a3",
+    "@latticexyz/cli": "2.0.8-main-4b6ce813",
+    "@latticexyz/config": "2.0.8-main-4b6ce813",
+    "@latticexyz/gas-report": "2.0.8-main-4b6ce813",
+    "@latticexyz/schema-type": "2.0.8-main-4b6ce813",
+    "@latticexyz/store": "2.0.8-main-4b6ce813",
+    "@latticexyz/world": "2.0.8-main-4b6ce813",
+    "@latticexyz/world-modules": "2.0.8-main-4b6ce813",
     "@types/node": "^20.12.7",
     "ds-test": "github:dapphub/ds-test#c9ce3f25bde29fc5eb9901842bf02850dfd2d084",
     "forge-std": "github:foundry-rs/forge-std#b4f121555729b3afb3c5ffccb62ff4b6e2818fd3",
     "prettier": "^3.2.5",
     "prettier-plugin-solidity": "^1.3.1",
     "solhint": "^4.5.4",
-    "solhint-config-mud": "2.0.7-main-82ada7a3",
-    "solhint-plugin-mud": "2.0.7-main-82ada7a3"
+    "solhint-config-mud": "2.0.8-main-4b6ce813",
+    "solhint-plugin-mud": "2.0.8-main-4b6ce813"
   }
 }
